Fix minor layout issues

--- a/assets/scss/abstracts/config/_grid-and-graphics.scss
+++ b/assets/scss/abstracts/config/_grid-and-graphics.scss
@@ -17,7 +17,7 @@
 /// @todo Customize it to match your design.
 /// @type number
 ///
-$rounded-corner: 5px !default;
+$rounded-corner: 10px !default;
 
 /// border default width
 /// @todo Customize it to match your design.
